incorpoated API to all services